import "EnumerationPointer.proto";


option java_outer_classname="GetNextChunkCommandProtocol";

package Alachisoft.NCache.Common.Protobuf;
message GetNextChunkCommand {
	optional int64 requestId = 1;
	optional EnumerationPointer enumerationPointer = 2;
	optional string intendedRecipient = 3 [default = ""];
}